--- a/src/app/games/games/games.component.html
+++ b/src/app/games/games/games.component.html
@@ -1,37 +1,43 @@
-
-  <mat-toolbar color="primary">GamesStore</mat-toolbar>
-  <mat-card>
-    <div class="mat-elevation-z8 column-flex ">
+<mat-toolbar color="primary">GamesStore</mat-toolbar>
+<mat-card>
+  <div class="mat-elevation-z8 column-flex ">
     <mat-card-content>
-      <div class="mat-elevation-z8 column-flex "></div>
-  <mat-table [dataSource]="games" >
-    <!-- Id Column -->
-    <ng-container matColumnDef="_id">
-      <mat-header-cell *matHeaderCellDef> Id </mat-header-cell>
-      <mat-cell *matCellDef="let game"> {{ game._id }} </mat-cell>
-    </ng-container>
+        <div *ngIf="games$ | async as games; else loading">
+          <mat-table [dataSource]="games$">
+            <!-- Id Column -->
+            <ng-container matColumnDef="_id">
+              <mat-header-cell *matHeaderCellDef> Id </mat-header-cell>
+              <mat-cell *matCellDef="let game"> {{ game._id }} </mat-cell>
+            </ng-container>
 
-    <!-- Name Column -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> Name </th>
-      <td mat-cell *matCellDef="let games"> {{games.name}} </td>
-    </ng-container>
+            <!-- Name Column -->
+            <ng-container matColumnDef="name">
+              <th mat-header-cell *matHeaderCellDef> Name </th>
+              <td mat-cell *matCellDef="let games"> {{games.name}} </td>
+            </ng-container>
 
-    <!-- Weight Column -->
-    <ng-container matColumnDef="plataform">
-      <th mat-header-cell *matHeaderCellDef> Plataform </th>
-      <td mat-cell *matCellDef="let games"> {{games.plataform}} </td>
-    </ng-container>
+            <!-- Weight Column -->
+            <ng-container matColumnDef="plataform">
+              <th mat-header-cell *matHeaderCellDef> Plataform </th>
+              <td mat-cell *matCellDef="let games"> {{games.plataform}} </td>
+            </ng-container>
 
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="price">
-      <th mat-header-cell *matHeaderCellDef> Price </th>
-      <td mat-cell *matCellDef="let games"> {{games.price}} </td>
-    </ng-container>
+            <!-- Symbol Column -->
+            <ng-container matColumnDef="price">
+              <th mat-header-cell *matHeaderCellDef> Price </th>
+              <td mat-cell *matCellDef="let games"> {{games.price}} </td>
+            </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </mat-table>
-</mat-card-content>
-</div>
-</mat-card>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          </mat-table>
+        </div>
+      </mat-card-content>
+
+      <ng-template #loading>
+        <div class="loading-spinner">
+          <mat-spinner></mat-spinner>
+        </div>
+      </ng-template>
+    </div>
+    </mat-card>
