--- a/src/app/games/games/games.component.scss
+++ b/src/app/games/games/games.component.scss
@@ -2,3 +2,11 @@ mat-table  {
   overflow: auto;
   max-height: 600px;
 }
+.loading-spinner
+{
+  padding: 25px;
+  background: rgba(0,0,0,0.15);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
