--- a/src/app/games/games/games.component.html
+++ b/src/app/games/games/games.component.html
@@ -3,7 +3,7 @@
   <div class="mat-elevation-z8 column-flex ">
     <mat-card-content>
         <div *ngIf="games$ | async as games; else loading">
-          <mat-table [dataSource]="games$">
+          <mat-table [dataSource]="games$" >
             <!-- Id Column -->
             <ng-container matColumnDef="_id">
               <mat-header-cell *matHeaderCellDef> Id </mat-header-cell>
@@ -12,25 +12,47 @@
 
             <!-- Name Column -->
             <ng-container matColumnDef="name">
-              <th mat-header-cell *matHeaderCellDef> Name </th>
-              <td mat-cell *matCellDef="let games"> {{games.name}} </td>
+              <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
+              <mat-cell *matCellDef="let game"> {{game.name}} </mat-cell>
             </ng-container>
 
-            <!-- Weight Column -->
+            <!-- Plataform Column -->
             <ng-container matColumnDef="plataform">
-              <th mat-header-cell *matHeaderCellDef> Plataform </th>
-              <td mat-cell *matCellDef="let games"> {{games.plataform}} </td>
+              <mat-header-cell *matHeaderCellDef> Plataform </mat-header-cell>
+              <mat-cell *matCellDef="let game"> {{game.plataform}}
+              </mat-cell>
             </ng-container>
 
-            <!-- Symbol Column -->
+            <!-- Price Column -->
             <ng-container matColumnDef="price">
-              <th mat-header-cell *matHeaderCellDef> Price </th>
-              <td mat-cell *matCellDef="let games"> {{games.price}} </td>
+              <mat-header-cell *matHeaderCellDef> Price </mat-header-cell>
+              <mat-cell *matCellDef="let game"> {{game.price}}
+              </mat-cell>
             </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            <!-- Actions Column -->
+            <ng-container matColumnDef="actions">
+              <mat-header-cell *matHeaderCellDef>
+                <button mat-mini-fab color="accent" aria-label="Add a game">
+                  <mat-icon >add</mat-icon>
+                </button>
+              </mat-header-cell>
+
+              <mat-cell *matCellDef="let game">
+                <button mat-icon-button color="primary" aria-label="Update a game">
+                  <mat-icon>edit</mat-icon>
+                </button>
+
+                <button mat-icon-button color="warning" aria-label="Delete a game">
+                  <mat-icon>delete</mat-icon>
+                </button>
+              </mat-cell>
+            </ng-container>
+
+            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+            <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
           </mat-table>
+
         </div>
       </mat-card-content>
 
