Create pipes for plataform, import mat-icon and show an icon in the table

--- a/src/app/games/games/games.component.html
+++ b/src/app/games/games/games.component.html
@@ -20,6 +20,7 @@
             <ng-container matColumnDef="plataform">
               <mat-header-cell *matHeaderCellDef> Plataform </mat-header-cell>
               <mat-cell *matCellDef="let game"> {{game.plataform}}
+                 <mat-icon aria-hidden="false" aria-label="Plataforma" >{{game.plataform | plataform}} </mat-icon>
               </mat-cell>
             </ng-container>
 
