--- a/src/app/shared/components/error-dialog/error-dialog.component.html
+++ b/src/app/shared/components/error-dialog/error-dialog.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title style="color: red;">Aconeteceu um erro</h1>
+<h1 mat-dialog-title style="color: red;">An error has ocorred</h1>
 <div mat-dialog-content>{{data}}</div>
 <div mat-dialog-actions align="center">
   <button mat-raised-button color="warn" mat-dialog-close>Close</button>
