--- a/src/app/games/games/games.component.html
+++ b/src/app/games/games/games.component.html
@@ -34,7 +34,7 @@
             <!-- Actions Column -->
             <ng-container matColumnDef="actions">
               <mat-header-cell *matHeaderCellDef>
-                <button mat-mini-fab color="accent" aria-label="Add a game">
+                <button mat-mini-fab color="accent" aria-label="Add a game" (click)="onAdd()">
                   <mat-icon >add</mat-icon>
                 </button>
               </mat-header-cell>
