--- a/src/app/games/games/games.component.scss
+++ b/src/app/games/games/games.component.scss
@@ -1,7 +1,3 @@
-mat-table  {
-  overflow: auto;
-  max-height: 600px;
-}
 .loading-spinner
 {
   padding: 25px;
@@ -9,4 +5,16 @@ mat-table  {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+mat-card{
+  max-width: 80%;
+  margin: 2em auto;
+  text-align: center;
+}
+
+.column-flex {
+  display: flex;
+  flex-direction: column;
+  min-width: 300px;
 }
