Delete function created in angular and in spring

--- a/src/app/games/games-list/games-list.component.html
+++ b/src/app/games/games-list/games-list.component.html
@@ -39,7 +39,7 @@
         <mat-icon>edit</mat-icon>
       </button>
 
-      <button mat-icon-button color="warning" aria-label="Delete a game">
+      <button mat-icon-button color="warning" aria-label="Delete a game" (click)="onDelete(game)">
         <mat-icon>delete</mat-icon>
       </button>
     </mat-cell>
