--- a/src/app/games/games/games.component.html
+++ b/src/app/games/games/games.component.html
@@ -8,6 +8,7 @@
             [games]= "games"
             (add)="onAdd()"
             (edit)="onEdit($event)"
+            (delete)="onDelete($event)"
             >
         </app-games-list>
 
