--- a/src/app/games/games-form/games-form.component.html
+++ b/src/app/games/games-form/games-form.component.html
@@ -3,21 +3,27 @@
   <mat-toolbar color="primary">Create Game</mat-toolbar>
   <mat-card-content>
     <form [formGroup]="form" class="min-width">
-      <mat-form-field class="full-width">
-        <input matInput placeholder="Name" formControlName="name" #name/>
-        <mat-hint align="end">{{name.value.length}}/100</mat-hint>
-            </mat-form-field>
-      <mat-form-field class="full-width">
-        <mat-label>Plataforms</mat-label>
-        <mat-select formControlName="plataform">
-          <mat-option value="null"></mat-option>
-          <mat-option value="PS4">PS4</mat-option>
-          <mat-option value="XBOX">XBOX</mat-option>
-        </mat-select>
-      </mat-form-field>
-      <mat-form-field class="full-width">
-        <input matInput placeholder="Price" formControlName="price" >
-      </mat-form-field>
+          <mat-form-field class="full-width">
+                <input matInput placeholder="Name" formControlName="name" #name/>
+                <mat-hint align="end">{{name.value.length}}/100</mat-hint>
+                <mat-error *ngIf="form.get('name')?.invalid">{{getErrorMessage("name")}}</mat-error>
+              </mat-form-field>
+
+              <mat-form-field class="full-width">
+                <mat-label>Plataforms</mat-label>
+                <mat-select formControlName="plataform">
+                  <mat-option value="null"></mat-option>
+                  <mat-option value="PS4">PS4</mat-option>
+                  <mat-option value="XBOX">XBOX</mat-option>
+                </mat-select>
+                <mat-error *ngIf="form.get('plataform')?.invalid">{{getErrorMessage("plataform")}}</mat-error>
+              </mat-form-field>
+
+              <mat-form-field class="full-width">
+                <input matInput placeholder="Price" formControlName="price" >
+                <mat-error *ngIf="form.get('price')?.invalid">{{getErrorMessage("price")}}</mat-error>
+              </mat-form-field>
+
     </form>
   </mat-card-content>
 
