--- a/src/app/games/games-list/games-list.component.scss
+++ b/src/app/games/games-list/games-list.component.scss
@@ -2,3 +2,18 @@ mat-table  {
   overflow: auto;
   max-height: 600px;
   }
+  .example-card {
+    max-width: 400px;
+    padding-left: 5px;
+    background-color: rgb(218, 218, 218);
+  }
+
+  .example-header-image {
+    background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+    background-size: cover;
+  }
+.container{
+  padding: 10px;
+  display: flex;
+  padding-left: 5px;
+}
